Fix hardware watchpoints in replay mode

Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=21969